[gd_scene load_steps=43 format=4 uid="uid://kc3idqbyageu"]

[ext_resource type="Script" path="res://Scripts/Goblin.gd" id="1_7bkus"]
[ext_resource type="Texture2D" uid="uid://bne5h7ldcoiog" path="res://assets/Monsters_Creatures_Fantasy/Monsters_Creatures_Fantasy/Goblin/Idle.png" id="1_shs82"]
[ext_resource type="Texture2D" uid="uid://56mcttf27lx" path="res://assets/Monsters_Creatures_Fantasy/Monsters_Creatures_Fantasy/Goblin/Attack.png" id="2_bh3pw"]
[ext_resource type="Texture2D" uid="uid://dk1l3vsm8f25h" path="res://assets/Monsters_Creatures_Fantasy/Monsters_Creatures_Fantasy/Goblin/Death.png" id="3_sjjbi"]
[ext_resource type="Texture2D" uid="uid://d04k64oobq3qq" path="res://assets/Monsters_Creatures_Fantasy/Monsters_Creatures_Fantasy/Goblin/Take Hit.png" id="4_0wupj"]
[ext_resource type="Texture2D" uid="uid://da7hlt804agk8" path="res://assets/Monsters_Creatures_Fantasy/Monsters_Creatures_Fantasy/Goblin/Run.png" id="6_mx2nt"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rnyk7"]
size = Vector2(22, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_wxt1d"]
atlas = ExtResource("2_bh3pw")
region = Rect2(0, 0, 150, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_sw3nj"]
atlas = ExtResource("2_bh3pw")
region = Rect2(150, 0, 150, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_0yuel"]
atlas = ExtResource("2_bh3pw")
region = Rect2(300, 0, 150, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_f3nvf"]
atlas = ExtResource("2_bh3pw")
region = Rect2(450, 0, 150, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_x01ij"]
atlas = ExtResource("2_bh3pw")
region = Rect2(600, 0, 150, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_n0lb0"]
atlas = ExtResource("2_bh3pw")
region = Rect2(750, 0, 150, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_vff07"]
atlas = ExtResource("2_bh3pw")
region = Rect2(900, 0, 150, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_0rbm2"]
atlas = ExtResource("2_bh3pw")
region = Rect2(1050, 0, 150, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_ndw72"]
atlas = ExtResource("3_sjjbi")
region = Rect2(0, 0, 150, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_kaevh"]
atlas = ExtResource("3_sjjbi")
region = Rect2(150, 0, 150, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_nas5r"]
atlas = ExtResource("3_sjjbi")
region = Rect2(300, 0, 150, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_y60g6"]
atlas = ExtResource("3_sjjbi")
region = Rect2(450, 0, 150, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_cqg5h"]
atlas = ExtResource("4_0wupj")
region = Rect2(0, 0, 150, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_gha3o"]
atlas = ExtResource("4_0wupj")
region = Rect2(150, 0, 150, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_203wu"]
atlas = ExtResource("4_0wupj")
region = Rect2(300, 0, 150, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_6hgha"]
atlas = ExtResource("4_0wupj")
region = Rect2(450, 0, 150, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_650in"]
atlas = ExtResource("1_shs82")
region = Rect2(0, 0, 150, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_dcleb"]
atlas = ExtResource("1_shs82")
region = Rect2(150, 0, 150, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_3wuup"]
atlas = ExtResource("1_shs82")
region = Rect2(300, 0, 150, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_4bqrv"]
atlas = ExtResource("1_shs82")
region = Rect2(450, 0, 150, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_tgfox"]
atlas = ExtResource("6_mx2nt")
region = Rect2(0, 0, 150, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_6uswx"]
atlas = ExtResource("6_mx2nt")
region = Rect2(150, 0, 150, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_bptof"]
atlas = ExtResource("6_mx2nt")
region = Rect2(300, 0, 150, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_ieq8p"]
atlas = ExtResource("6_mx2nt")
region = Rect2(450, 0, 150, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_wyls3"]
atlas = ExtResource("6_mx2nt")
region = Rect2(600, 0, 150, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_e4ude"]
atlas = ExtResource("6_mx2nt")
region = Rect2(750, 0, 150, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_y2al2"]
atlas = ExtResource("6_mx2nt")
region = Rect2(900, 0, 150, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_7sm1w"]
atlas = ExtResource("6_mx2nt")
region = Rect2(1050, 0, 150, 125)

[sub_resource type="SpriteFrames" id="SpriteFrames_1mjsg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wxt1d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sw3nj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0yuel")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f3nvf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x01ij")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n0lb0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vff07")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0rbm2")
}],
"loop": true,
"name": &"attack_one",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ndw72")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kaevh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nas5r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y60g6")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cqg5h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gha3o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_203wu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6hgha")
}],
"loop": true,
"name": &"hurt",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_650in")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dcleb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3wuup")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4bqrv")
}],
"loop": false,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tgfox")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6uswx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bptof")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ieq8p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wyls3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e4ude")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y2al2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7sm1w")
}],
"loop": true,
"name": &"walking",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5np7p"]
size = Vector2(107, 42)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yxobt"]
size = Vector2(107, 42)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n70vw"]
size = Vector2(66, 24)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_qg4cc"]

[sub_resource type="SegmentShape2D" id="SegmentShape2D_yfhcl"]

[sub_resource type="AudioStreamMP3" id="AudioStreamMP3_3k6i3"]
data = PackedByteArray("//OEZAAAAAAAAAAAAAAAAAAAAAAAWGluZwAAAA8AAAAeAAAqqAAJCQkUFBQgICArKysrNTU1PT09SEhISE9PT1hYWGJiYmJqamp1dXV9fX19iIiIkJCQl5eXl5+fn6enp6+vr6+3t7e/v7/Hx8fHz8/P19fX39/f3+np6fDw8Pj4+Pj///////8AAABQTEFNRTMuMTAwBHgAAAAAAAAAADUIJAQ8LQAB4AAAKqjfmSz6AAAAAAAAAAAAAAAAAAAA//PEZAAHAAEzL6AAAA2IAlG3QAAALQjektal29wfggoE3wfPh+ciM/rDGIJc+UOeI38P8uf/QUdVBDY7w/y7/5R1UEMMfOYY//wx/hhXlL3Pe5UA+oEAQLvg+8PqOS7wQwf8vwxyhzg/y7xA7/wxyjogd//+GPxAcic///3Z8uH//wwqZ5lIUoKDrFpbSo+f0/UhkCRfIQi0bhUMCgBzIRrTqsQYNC4EIQGNDggAzUqBR0IYxKAiFFUuwaKFyxpugYDHFPuo77IzqiDAVB3lj7IYuuianF3xaQNLRSWvK27pGQE7TQXNguBmWRiNv4l4y9Ouqie5df5JJ3UnnaiNNA0OuPG3Ia5FIfj8utLokLyQqXxqGKl27TY2bVicj0scd29RRl7/2oYooXLYvAcqldFF38oK+qarfv8jeMFwt16OzhzGny/jhy5t8OYfrPLfIAqxGXWaW1jZmrOOXLus7+GOrdannM8rGGGG8f1j3LPdLrkssfXr7/CnxqV7tzGr//PkZPwi7glVf81lEEUsJor/mMEglnZy5j3n///l///93U3r//X///3v///nSY3Lyq1o4nOJbhQRcCbUzbhKZc54KfIkjE1AyidTNkcVzlxKj+RhDqQEMywYRTGmRTbG2ecW23lbmp8sw9lWXp9vXZYJzOnmMW5tezjE5SVJRZqtbo71LTQ5Ajvt/g48vhpzH4e5Gh8rlPKI1E5fPP5nGGtuPg/DXI1GIHm5qrLJfTyivQ3Lspfegf936Scv3Gby6UZS2ni8ORupGqWiv0mE3UrVbdpkcGPtTaxl8fg6djdJN3433/z7T77lZp7dinp+0+6lPu5vvP7lvOP6+MXb8/hh/OXblL+FaJxecqTG4fqXv/HtaMwPTTkvh+WSu7KKt3KV3v///dyeq17jtP/hFbsUn+7s4//5/+euO5DMLj0rhz/7FNW7z6OC8EWa26dPYak0pOLBra3IPizI4GZ4yhDJ4wkMJxLqg4408zDaJtQqCGBB1kFigqayvGuOXD6YrV2zJhskf91H0T3eBncShu4yNxuylukBsHWkXkrw+pumSkyshCMCohcJtGgRiRpEJoL8Rra8sxfDgPDKnibWtDkFQ7AzZpHHGZuS57KExHhgCWSRXFC38535bP0EORv2//PkZJsiNftGAOzkAMXEFoo1z3gBsPjL12N2ovlDtxyzJ6eOyuLSKcysU05N0z+WrN+UYTEzT6rWOZWK+Vj5RYz1Us9wwqc/P/wpL1ivlhXsdidPhNyvv408/lWlcD40/27lSX9pPu09Pr7H2HY5e7bnMaKPVbF2e3atbmsdb3rDW8rH933lcf0PgLKMBASg1zKeHoIYFSObKZa9eNCn2zrF47HGkiJh+M4ME6UuAFh8D5NMKECBRYScXY+ort8wyKlbe7iyo9WtOoi5V9HLcB++amByblM+KUZo0ABGkHzGp0EyF0ViuPZGLC6iLBgNrO/ao6YUMZWF7DVjIBuGIEffos9DlIa+LezWXbxDHFduawdZzk9IFFUZLQ5zQVDOcbe2koMxUrzp4f6fIw0SQ109RbUdbW+Qh/huP2decJWhD2eAu0LUkSVQMavclZdWLDGcCPlUisXKFrRwQTXIPBjl/V6mVlI8ZvhqdVvqQqXzLG24QlezHQ9VUtmBE4OFKHEvxkMlYFI3KxBtiCyoF8+kehkBlfTZgphQNEZOOLG53j3HmafsJ2KS/fsEw+1pXOC723o9anUyGQX0JIGdZJGnNWlmbUCPHeYwUOYnKoLitHq77VDZv62gYllfJ7KU//PkRD0Wdglvfz0ojq2sFtL+eZE5HK5Bm9b3tlhQQMHSMNpSOooo2G9QIScnliRC3RyUtkrh+e7kN8lsUJkfScf2JApOFrpILhjEIE7mHj2qhlvL9xS1P99fHc927yk1Fjay3pDJkwpBUG4f3BGFyEmZqtrGxfvCJaNUzrP1FdiiSLi6VT5E2WIbETbEzK9hJ1OzW/RiEzWlMsouGuzzVT5eQiLaE1FFASRB4sWBCUVIE7OwQHBDHB5fd4PByadp+SabanENjZBNONgIG+Qxpyd0nRAYMzm1CK1Y1n0hdrIJDD2FVT2o4P72e8NmHMbzmTtE4rGmVkFFFo9hcuKeKYe7y9XNVW08EVXD+6LapZqWsCgvYgOQ7wioL2MpsXFFfln4slJpr7v57iCYiItD4FBDFx5AeHlnYwHxIaIYHBQXiRW4h5aIFaFOWWUnUqGj1qpTJcuBltMQvqSKVvsqNzqpsiVq3v5KVxOmwaAsVqaVOkaOkWcl1Zho4IxOOCLskF6ujfCBRaOeqTJ4Tbg62iIVTkblFEvs4SegEZM329TXmuvCLVTq44tJtW8zHs5Wr4+1Y5j0EKVpDDsl7ws5wvLkVPylvx99+51UZjtKcBMWCNARn5o+TWfCxwxKTmBk//PUZJ0UAZdtfz0jjilsEtseexA8WHUr/LvMlQVvVJbLCEk2JWSEI+cQLKyYLy0oUl5EIZuPmPGzFN1u+TM/GRhvfD9ecjVCtyoe40VNdxpAsLQg+OjrhhC+EobZsscPHiAOgfQfwNGKNYUuxFPIaXhxd3cyYq0bQizj/qR6mrcV5c0zek8xWlR9xX//N////8RFO7dUjk1UN3RSalF+88dFGWPisgdZHAufZkDpvRERXas5ZNaGl2OZRwh2ev6bpogToKkkVoj6IYNEgConNPNjQjC46SMDeowQV3L99/Izcj1JMYy+ggjLCKSqHoowJxaWQtKlsyfsmER+vdaL4FzeMv+WXn4av/WtNX0344W3IP7ueVOKTw4k8aL0VFr/usZQhpq4mhvzWvVZu3TZmEz0Qo2rskU/sMIoQBRUNGj2yshlMMUUQqiTzOYWYTZi9cosLrjdXHaGq1HvZucRxj1LKxR+2pY1fcY3JZ6Rznuc8EvLlyWPQXBoVHHJmPZV4fHrx71l8Sx/cU1TQNXv85nZbgUJprCQjtDxSYcuXr5k/5NG7ctFVVv33ljRd5Ua//O0ZPIWAeVpe2mFmibcEtL2yxBccIQemmJZrjC5FaShxWDcPBFRDxMKxKi64uOr9//n7+5//jIdhRcY9f////qP//esve4ZRWrWH6nn/Wlrba//2tfi9rX4gaq/KEBtxzNISATva6/gWWGnUWH122lmkBATvac8jwLcAHrSKWXjA5EggonS8TJnGdGIR6M7lEOaqzPItTfKoy6i31O1QwTDcBRahTVHlSFITQbNpfbrzXc2yrGqeskljCuBJQKQEWjKgnQHmFEYmOmrSDMlBISAgK0E0jcLUnjXhknT9SSqaTXKUc8/9VIiUOiIcRIR01R1+YzDtmLv1dVdzqn7PvtoXeeXPZDNR89Bs3GpHVz/ki8xvhUHT+Okeg0IQ6ERgDiV2ocUYNT/B+YLCgMIjlmtapoZneVexiUUzlwHVjUEV2dUrLQwJl4caxt/2YJh//PUZOEVxfFlZ2Unmjdb0pqGy9s5PCrYpcl9EnYjrLmKwxqobG/8FlexJ1NGgVm+WEF2HUEaB3BEIe7giLsgIM2BrNgNdmBwEZGNBSuTsLc4FgBylcd5N1sWIibE0ePUOvzpGAyRG92ftv4K1HRq6YJ1YtINz3//ug9ieHIG4ZCieJia8lyxSvtUOIpfQJE8skRzmhCtaZkwvEsm+VjyMDUb86X3NDAcBKf6kGLhp6i4ShuPc3fwiwU3x+C9G61V6Gh5lIUZSlv7Gxoi5Ap84XYr5zublAbi6HKhTN37UwoVH3LhiXJohhdGIk2TQNDmyyQPhxN2I5M9+hiSqz4d8ItRup807VjgwVrhO+qMRKRouk9wIZV/PeTeOcrnbqx48NAqXHx5Vf6rNps6q1VOvp56Kd+a1SepdaqNGW7WePx8bln/+p31S7fCEk1HNbb002suIJzbVX1an5UJf9MgN5K0vGo3KRhQ5mkfrp6jt2guoEaj+sRT2kcH8ImgiPQIskTYo9mI7M9/Ep5ufK7ZXR2/mpaegFbKC/VZjqOLj7IjoPqomYN7J2unZd3ftFO0//OkRPARvdlxfzzHfiUbst7+eYs4i33/9lVixiyups5RZB+k1DjCi23NiYK8QCYi4mQw5xYRFrPE2Ew+GP/9Rb6pdvh4d+aV5nV3lAMQKes5eiCluzgwiGS6zQnwShXqWAomN2nnKWiwl5V3I+iaP7Jd4pufEbYCkqjSVJtAt1Q8iqqTnueGoZkkcWelC7S/uUsMxmRW6owvcRRl1iV8kijKBHJdtp5nflflaPMbcVRKKZriGLWP//8t8t8klllp+bDFoV7a7SiZUXOhv+ppyREVHaMVNFhGc5BR0q9//q31Nmt0EkMleKB36iKRQRBEQEOADOY27NDeLxnfsbyolrAZt5Yp61VLTaPCJEeKZGQghDzJFwXRpQXNImSqE82Y//PEZNgUzfNpfz0nnqyz2pqGelXgY25gp3sa8Vxv//uQmLxKrGvayBgqU5Cxi2proSaI4RXT5HdH30iZJ/NFTmPM2zzN4lJeoZwF8OJCSxn7U3kcisOV4u0O1Lz0PMjY+AdoSjIIxX///on////3QzKIsFkXtgbC+L4iRQhjUQVCTQkPf+j/Q6c/oQC2/8eEkOyAJ5cDqtiZidAXIQp7eXBaNzGxOAasBGJ1sJgDFjwboWPU5uOmFWKxXPHGO/3qOq0PZ2qFM8qF7iXT7dGAw5po4vXT3xVFekloUEJRmzCpQyDCDNlP7P9NedbTS+jBhYj8iRttjWEC1RfmxZ60P4n0CMhXTVNN1e/f/Hf/lI8WdJuSSJROlnrpHMeiT0OMw4Qoo3EG7FHkECkBgOCDjIxTv///0FgiHnwGEv+H2hCAHAGoEkmc8xgmBpIcszSl6Cs/j2RxabdmrDK7GuMCdBdBMGXrLQeHFAssL1LVDrkNCaKSLbotp707rtAnmdza//PUZOkU+fdrfz0lnkCcHnnmziUc0E6cJdMNapZc33f1KIZW/Ru6wpqsJpMH0TKbqZhO1Azv1hwCAE1CS/a+GIbwepD46tmTqDAYgpEcKE+eYlgIlCQEGH+R6PZ1frjQZViilSqyEMYozz/5y331iQe0pM6hBoFuIjpzo0sgQ/U0/7PPb/////yVC9wgOF+C0qo4GNhGyNwsREJj6ZYDGYY3FmB8aRFyTUHvAikQEE6D8FhY7Ff///g3WDSvqOJBZEHA/CeBcCDeEmiKEUHMJxYrIVs1LVX7hYasCVkKaymgaTRLALsRGIcuzZLm2XfzODHAYHsJD58PMPWiJFg0KXViXFANCEqoyRBelZt7OnFs25ZDILuNbq0aVyM9bUqVZkdqs2Mdfdkoheegxb0FQ/r+cvJDHIv1d7WQakeYqMa/6N/dhrKUpyKqK9CrvHrShnkpVuh50MqB5BRCwgLjlEjsn///xV+raAreqjRY7igfaU1sO0PUQqiS43Fwhzd5DOMTytr4aJJ0Mjq9xSinhLhW2Y58PHz1GODyDhQxbTQO2O3sGSZ83tqdu/tDpAhY//O0RNkThgNrfz0ljqWsFsr+eYts2X6yJMXtpKPRzLcHd61oQdoy9Ykm74iapiruXO/Y3LpjChWlfh9jDyIZVTo3+yspSuRVS9FXe6/ydW5TzojqiC4xjKKiEXsn///xjdW0BhbyoMBSMDhxlHul93mJrIUiKm1SiOtDfQgZDD8mdk0DhJe7NQ8kNJ0fVOE7yQ1YgsaCpBhAERWLMPx5Ayos9aTVo0Jp6FXU01F0bCerYTLyiTOyepoYMIUyT/Ok0tIMOu0yrFRWrNkVJMu6l7TkZyH0WgfjBxAwFZAgjhkDK5fgk//n5G6cWbSF1BAuZsMtR7V/DC1Y6uDSrGklijZBWxV0MLhx4K////TAAAOAIDcaKU9YgBHgHgoOxRDFWqjzhp3Yaa85b1P+nYGEsejJeRSkwoBlEqGDSZkEGEOAvwNCpqJJCMEeHWIw12G0//PkZOETxaFrfz0oXkWMInHmzifEcJkSzmjTEWhuH7rDYtAbbN+iQwZSZehqTlIBEJbOAaGBkMyUYzwyKFNZOtR81Axc1RgcXSVBsphpJqmCmu5PKCQcsIlkHBJhlReNFI2hVTqzhuxQrwsaYuBCjSREMUAUBf9b8cdyc392ksT2b7IdUowWFH4eQ3EaaFAk6gVQsmqyklkQhyx6bt////////9MwJQMUmJeEJBjgImAUEJGGYAU0OYOA1f///+shgoAtFgwDIpZPkAIoAeMAQgcuDbohwBAQQsCyoQ4BQwQAAJuJoWCedXnZWThtBXtauNw58SqUvhJT/orFS+TTZLBlfXeahvW94c9FZAcoybcE95mCErrv17bjX7NJK1S0FksvI+YhV/IdPukT1CV3uFrlMtsJagr7zh4X47nzT6tnfd//u+yuWSli1XFP3/IoiIZ5hVN0YrMOTNU0rfmt6c3R5g8o7zs8uaDgXnkHQuxAfe///6J4/7F4+PHY4hJ4kprw7vUU6SnskRFS7lUpICEmm8bErAPFsgsLa5MaciQ5pYCLiIY8jNznzqxWSE+y3rqs2a+UjMzUEklH20qmKc+G99ki7xSadO+tfXjTCH3gzn6h3xmNOv4+3782Wck//O0RPcTJgdlazzHqidECsr2eYtVpItzTqVhW839xVERCeQam6MNkMmVSjb8rSdcujyCSiPFswYIhQcOKDRYRHkO///+ieHB/EAyEFG2AcRDrKDTKup1eIAVGS3/pLHQWWaAT5rOJyfjJPlIH4WM6wwI0p+fPRbYpJw6Fap02EkGojm6lp1e2s1Ow8veLCpdhU+G/lDUD8MtIqtI0W7uNFq0s0w854V3F4gblBIKQeQOUOzheyjJFkaYrtqH/VOWhDXtHW40QWFGb/bn5qujio1Y2PRZYdw8pI9LmxlQsTPCwK0NYGw4QzxxB4jCCXFqNK//////ga5TZbMACA4ArytnT7P1AEDQK06nsigL7wREHXi7kQUvlWOTKMrxaWwZLyPiGIyYyZIsNgsIDVMXy6YFAsxBEsWLPqjYz9a6hyS0Nyh41bmySxrjRHxVzLVU//PUZPsUqddpfz2IWj7cDnoGzhscYDfpNRPJYzXJuTJYFp37WCVUXSnepioeQRQyBR14rlQGKLAtLLgI6cjCAt/HnMJBGoKiAw5aXsU8vhGUWG3IeChzLJvgyenQkum+Cxrf+2Rkdmfxrdp2yOKtFyS18lTEdqTy2PONjGr/qZ/////+HUdQcA5DRC//9GkSJoIEI0HOLVMsJqF9f////YScDqQCUY4J6PAkxgQI4DScAY4EtMXRCuB3PfuGVagi4k7/6NA+nCg3eFY+CWOhoA4ZFsrXUBwWTERFx8Vz5M+lbTRiV52RCcqNS9C6pcnoassHUTOP93vkh5mp5PPzyRusbrEGnZepBKi6GvL9mux23u+setEcSgwgyytqsNlPpFFnJEEJIEwqAJo2hZNg9a0nxL99///VbSdtHsnTF/8qztV/XUl9Pdn/aEYMavjkRqaVKhMVFgPiI0HnypH//+bqhRDhwkpCNK/pWY+VgJHS4uRdHBVMaTpKfkx1FMtrjzSRZom9w2ZellpFhrpnZzxYnza2dVxBkZHrZIrVxF4t5Fa4sZHKqG1R22w+jdJS//O0ZPUV2eNrfzDH5iFD9rbUelU0Y5NddHZyrJZ78MLLPSophCY7D0T//PaOK888gJyh7Tv//////+joT///t4TzjGMft59P//4sKNioi/lB9ISZ6mVY4aMhP6RTrCzKu0siTtS1mY02N+TxgIAdbyUnGlSGIFNxQqFQRDwnFiAVGowDSJCQoXKkpO9GugEsJL0rkSd6AqOI1E0ZrHrvi0/0gTWCilVpGUM7LNDYqj4wxPWMYsXVRwWMPVEEdy35eO+NCEFXSIr//lfowffEXUEb0qTFFfLHm/7zXpBAzgcm8v0WPH//+XA+/jPtXZbLpJUzcJFpQwX55tra5SWR8eOflpL2ru2YMrNGtmFkMDQsg4SnQqFT6xXiEVtH2RIhuS6n6bfyTpwaRpIHttHY7RRmGqkqr7Tn1H/2jKrHTCyxBvW2EP04v5pF1FwsDZAi//OkZPwS+alpbz0oXiWEEsLeek78JAzJmT6fo08z///T/zEO//+hEmo3dhw0wbseYUblHk///1HSpQAouPk3qCwY5mriwR3+l2mwORpy/6vYh3MiwjVkKwV9JLay2tJP6k+NKO6bDMYY6uUUucv3TOnjRVtny3ZWGjrTRSBaDlWiabJyCOHnJD9RtNKsEkft7/c4RcijRXglZyd+FdEVLGkb+snOYyTTb43ZYLQGkMGHzES3aOUI/1KP////zPln4pT67G5JM1zX/68VBcq8VBJYchOMFncRyyb1O/+n9X6jotn17sPYwuPSYIFaHZSRua+dy01fcYX1aPtb192MvEMxOoTY6PDySfRFH5UeW9tne/9p7fnEcP6L8s1Jt+fm//O0ZNkTBadvfzzInCY0Fr7MYZU4NsnIFJbjqkjXITifbKL/9N7SP2SJIFgcBIkROEIT7ECGTu3//6oYYWPQt6E7Ib/k+xHPo6ULsVNFk4lHpVm653/8znypFWFknFNQpS0wQYnmCMJhcJQrUPlDRsA0JRxBnliaHzxwnNE/X0RVrg8WCOH4vcTAuZPLmURfOwDEwfzUUNJT46UeiijtSJzWTEO3U1VsCD0fYhndBNA5mKKLGVWKSxhsKJRM9OgeiopiSTRrnkjVs6xQTFFSQZqYqFVNZAnMNIaLDk6Zg0yjy2tD//////2satPVFv8XN9f//8e7oMmWMHweOEckoo42xHsE/i3yz67lZz7dVSIEMASlV1LGvzksa2ulruVJPy6BJbT278tfZudrtBMy27K3ilsvjswiOokAQQOjPIZCoug7J3CUtuNp5U0FlZNd//O0ZOMT6a1jaz2IPiuUEq7kwk8cSYIIEMsLqIULp6FTWooikyZVFA8hrEoqR2FIFGIbC6qBfrNyjZkiQs0iZmRwejKLJRPNMov//6ss84zTJnnofdv9M2YqMUHVEIrFI2Ki0iZPJ+Y3+g4yG0LM6kanIN2QqPypcmXG5pIownr6eWiwOWtx/WgWClroyCKVxyubLJz/EYvOKi08uxDcMcvWC7SpKvKVjlbQ7qrXLfSwHZJOXGoGefb5d8wiDGhWstWzMhURqJcJXBLC/lI7rWDkQCcRP3c6L5RbXkuUZf9XNiDNTy/XVr0y////88+R1ipTCMRkanLwvzI4Ugst8wI5FoRyldDX//+F//P+2wjJIEow7MJNB/hWNOBoZVFISLTjvlydrEwvn7K93RabtOSqjPrQYid3HYV1HP5aev167K96+NtMzQyLikhYSWjU//O0RNATAglvfzDDtib8EsLWekU468IbqTnmTWyRxezGD4Kcyhk1cGoKyy4zn9G9HWhyezYTQ3GcVmfCGJU7f9Y/TiTbWyYZuAoWjiWu3/9HZ0dFzCtyu8pq9+udyqWgz3dzoc7GchDf/Xt1+CQ45RTqHQCKpRTHE/pqZ+wVEkp9qPaMzrEDUUKNVUYx8kHZWkkuMjU5Afvnf7U6UIJPYexZq0pMPpUN9dAlpNiCf3t8bbko01G2q2NoplHu0mJwnEc2dfVRaX/jGh8dtfshK9S1T4dh6yAa1FWVv8jhSKRWv//r//j2tflkR4qNjYhpb/8sdX2OZttazBBD1LUcKNw2///H////1rmEB+PFzgcdaEE75i1jMFxpR6xjjR6H56hLo45S9Gzx1Yr0Vl7AgpKJIzx1PutXygc1Hafbz1Yp1uy6gYxrmDnNKMTbeU8V//O0RNcTWglrfzDInCZcEs7+eYtUB8FES3vXxlX3RNvm09TD9D33I0gOUzwgxByHJbPYzN935+1twg9Es+fjTIKEIw9/7f0y0eUiC4Yr4mhlKtuVjizbkVNVFmFw6PE+PD7Ian///R+LiYcHBwomQziSqvc4NZBkA2sjNQQq/gt2CTvB/MA8Yq7U5cosNsgMRyKRctNHqYT6pQxCjjVhJWR+p5IKRKqiQUiBoLzyDBuNjibWeKhARo1vFW8ikh3dLmBDCaNAmQOpkzEQMIG5IR1KCP7UP4VCU//Fuz7r8022NQLvRvS9f8KV2QzXIRXt/52zPsQQdAuNMzIZ/lfQKYmxwwgGHKogNiXvEAD//1nZv7izjgiWBS7cKo4cZW5BZtuiQV9OnG7XZU/NWkoKaMXJXP6qyi/GeSN+x0MwmTlMSKoSIgpIen5zve9CvNf7//O0ZN0T0bFhaz0inCi0Hq7Ewk8cIyRroGppxQkZAZrxWJEzS59BbnyIysBQgHVikDMLbyi0p+KVvf+k1qax6EjZHCOOa1HmGvL/OfU3///+OMdR9W/+a3/lBuFzhaKRHmGIb5Av//5n+RHiRYNATFgZG4RgLCcgTerblmjwqDXscJDoMOCiAxQJY1mhxZ4B/kgQlSl7ljL4+jUmdQH796llcoHk9VEtQrw30BcN7azyTHaSSO/uDCklkMdAWeQbHtnR/QyZJppX322Sh7LtFA/CCIMamQrdtaW71pIeWzSmbGSw9sbXz+j3CA5UZHd2rvkUzDGfzoaVlD6n1/0/OSjjDxrDAY48O7IZkP//8d/6NjUmER6u3LLEYCUJ+tl7uxxm9EBQRCjqWXTPInzAQlMl7huSTDiNSZwgWY4qbVx0KyPpyVVod56Nj1cx8THa//O0RNYTlgtnazzFqqhcFsb2eYtZlp39wYdqeKekz2yC9yUfkTMm0mW2ZbX5Rl5xUu2ont+5u0k2LJlU/BMoGOxPVEyW5Zcfu166YY1sbbpXffueHpRxXrONMZRFjFHOyF/0f5yUdBEzmY6hYfaxjFKv//qP/9XqFHcRCVbpalbRZBnv7oqWUe84lQjh1Jx2VOdHX9hmMx+rcpJLZlNfG7KqSG4itZS+fDKZGGiFCPHmsWmPXF3TmxmmHyhC3NqqyXXSKMEGrXOrkrspdAXaPwkzFz5n1WJUy7d2cNjf8ajaupveyiMrryCLDaMz6Qp3/Llh5zS5Mw05mH8z66FZqnurvRkVTDlnf/6mjVuREcfEI5IlmHSQtoeev/V7K/MU+n/mWJV/T0rxgEpkkWWs3kuc1iMHIhwXNtv9LyXxOlrS2CbmdPelNNOzcdfpqeMS//O0ZNMVDglna2EnjqS8HrLkwk8YGKxVeTKLVliZ+f3tzhDnEkMYn5lWGxWoskYJ0Uk0vARomcWQhuz6p8R0FSMuWmLUpSHdZac/90F3bZpJpJBxlLoOjWpv/53///laFnZKHx8Fo+NHNf///8zjUjPf///nP//x1h4ko2OqyFeUoAEVruqT/VU0CDGMkZz0z1WHUzKQmF46mVayrIc1aPT/LodIC+5ZgAgAxELIoSZdJnGsCoDyiVF0869nCiBpQqgsceDWCDFIUksOiYxHURVgKbVyPCzjdVV9HpR1EkGogTHhwVFnQWUWTfz2q8r23/kTpe7lUXYYjiIqPMIh5///6h5mGCocD40REQkEhegf5RQSrWCIZIlH6BJ9Q8tSEYHf04aFpcPWLk3fQklYbMG213R68vivK5VG6sMTd7HCzDcGQKlXB+eD+yjKzF5S//O0RNITxbVjdzzFiifjbsb2wYs4pEq9WkbBEEH0keROcvvZ1RiRTn2RSdoeGpM/PhBIwkWONeCUHG2i+Fva/tb87ay6GlOq0DFoMnJKt9Nv4mzVeKj1bH0+KG6IPndBgFMNZ0cVExB2///zNUQEBx2YaJDsz84IWYkBQcwPULE9uFhkwAAV87TyrOrT08dEIoVg9rWZmDVXK57W91YJaFIKLl/KEqAF51SxmySxXC5nFJ4tBEqn5lGtm0rCefGIwMLqsmyMSrHCViCrNzpDvZw9JhqOOOknp6iX/9bv/8vGoWqia9awjPiF9o7XrM//7G7mdXWHR2abfQpuhDXKVjsxjGdv//52VkBCh2IOph9kdv///5Lv9Ao7ZZlXAFoGvrkooexxzu0IySLfRUtW637JbeVh1b7n0Vnl/sgYYoe5OeI6hTAcWqCcESgas61M//O0RM8TGglhd2EijqZ8FsL2wk8Uo002iitPPjEcghVcuXxItGsIUMdWVTTjmNyjmQillaJh45qHO/kmMcxTzla5yj46xix9Gb7HdznV1j6OzTt9DTuUMR0Pz2Nfdv//1PIGElNFo1OCY+WGuyOWf/6/08fs3x1BovIAACkNnMGYBnUWVmUQWYBSoQsBTNSURSsL2rUYe47AIUIAC4zEk3pXAIwA6mMmwMAENPcNSIWITA0hAcSBht0BEBS1RqBgOMs0R+aWt52WZP6+kOSmffZtYcZ3IccnvkDXHcdAGhF9MJWsjVtQQKBx4CxhsqYsOP3DygpATJF4QoNkB5AYROD9AQkudzOlHNcRWeFP8Kp3J/iq85TuMF7hliqVxbGA4rJEykKFyc+82919/FRq7HKQGDx8mysccOuaRHSsavK3IDRR8gJ2LjJw8Y9Tf//o//PUZNcdug1DQmnn1CosHpKuw87cPRSEgRhyEiotEY8orUiMXQ7/////5VsVBA4BPgJGdZDzYzsGSUALg6Y5an7G7z7wu9RvpPQ36ypjOBxEzVBrFhmocy5Z2tPq5c6dNzM+i6xG/8GNiN/1vCdP476TFtOEyoTke7DphbZvbMZZZVMo0ILCWR5GkS7b5y+DgacdMGzp6DZzBs/HxgeJxJFITFRUXmDzf7GHoYYYYp///8/M/////jpJCTiKWQuw6R/9G/iv8aPlHPHXHS84WHACkiL1+jMSQeFu7+4RFcIVeRFGGWMybobBVsBCmadO3aY66Y5oLwzimO5FrMOjNptZkOc3EULLYsQiVxMgcmSrYNmP4TjA5XVJQNPHF6xa+iVxCmmt5EJldU6JNhK0OETtYW2SV5sLvKnKzlkSrCQLiyKXuPIch//KqxzbVzcnjPaQ25lak3V62jOUqu6gyDKJb//3/MyCR18zCn5f3UroJ9WTIfiwRUAzhrXe0kItSiTzEfDWeaywp1rnEq2VhWgzzMHQDJPnbzVbJCUaOkf9DP2e6zR09HqNS2isPElU//OkZNsT/bFXbz0inh2EHq7+eY500eJKRs/Gprf//mLj5FHZHjz/9TnoxzK///1JPOYif///+7HNQe//48byTFvzfoPCppQlx4vUBpUejxzYQwFVPNFTbSCcoc22b2pSoZ4SlPhmVzE7bWWDBiq5RE5NEgIuYtZbxLo5hNFKq1ljRm1oSjm/mX3y8tS13ZlkpZhtWla3YsSun1Kb3jvn2MZzWtfAZqxmtln+a4xZ9j4rNbEbObapnWPmaLhtpHtDZa23/61r//Wtab/hW+a4hCYFhxESvIiIDLGrtf/biUaEw3KhPlv/ALrV3aqjMxLCMG9zoDA1BJECwWBL4qMEyJEJjplUEWCLSFxCTC4SxWdGpEqIpdhqREUqJw4Ti4aP//O0ZNATRTFNf6e8ACC0FpsfSTgA7c/8eJRqaQEQNFRUeOIP8w3/nTn46POg6ZGy0Nnt1ZhKNPHjxJKkv//V6OayP//8xUNHSA2G3///5rGtT//6ed/+PlzCItf+o1YTiS2wCjBmAUHCYSBwSCgUBABaMGKfC14N2vgIQuQXRjsgJkA6zUQsGo8BcgNSEPFzB6I8BkEOR8Z0VgmA+YX4wCDEOK5M/KwgKPBRD4RSBiy6Jl+QEfQyQs4ZIol1TmK2SV/JobpFi6K8gRIY02cxRZJJ2R/5Ok0Q4lydIaXC2QIpk4Xf///yHE+bEBJg0IMRp0nSaKRXIqQ0kf////9JJaCKk0kVMktZqqUFVwAoAcAmACAUAYCAwDAgCAABAAtHwvaAsHw1aGWfGVEZAQjU/Jk8kZaK/IkZIE0b/+ZPWXUf/xyhxG9aP//Lx0vHTBE6//OkZO4VObk3f8hIEJiDfm8fk5gBQEy///Wj//////SSMj6K2dWtX///////SLzqOl2ZTEFNRTMuMTAwVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVV//MUZO0AAAGkAOAAAAAAA0gBwAAAVVVV")

[node name="goblin" type="CharacterBody2D"]
z_index = 3
collision_layer = 4
collision_mask = 8
script = ExtResource("1_7bkus")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 29)
shape = SubResource("RectangleShape2D_rnyk7")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(2.38419e-07, 14)
scale = Vector2(0.72, 0.72)
sprite_frames = SubResource("SpriteFrames_1mjsg")
animation = &"attack_one"
autoplay = "idle"

[node name="Detection_Area_1" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detection_Area_1"]
position = Vector2(86.5, 21)
shape = SubResource("RectangleShape2D_5np7p")

[node name="Detection_Area_2" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detection_Area_2"]
position = Vector2(-87, 21)
shape = SubResource("RectangleShape2D_yxobt")

[node name="Attack_Area" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack_Area"]
position = Vector2(0, 30)
shape = SubResource("RectangleShape2D_n70vw")

[node name="Detect_Enviroment" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 512

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detect_Enviroment"]
position = Vector2(12, 26)
shape = SubResource("SegmentShape2D_qg4cc")

[node name="Detect_Enviroment2" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 512

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detect_Enviroment2"]
position = Vector2(-12, 26)
shape = SubResource("SegmentShape2D_yfhcl")

[node name="Death_Sound" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamMP3_3k6i3")
volume_db = 10.0
bus = &"Sound_Effects"

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="animation_looped" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_looped"]
[connection signal="body_entered" from="Detection_Area_1" to="." method="_on_detection_area_1_body_entered"]
[connection signal="body_exited" from="Detection_Area_1" to="." method="_on_detection_area_1_body_exited"]
[connection signal="body_entered" from="Detection_Area_2" to="." method="_on_detection_area_2_body_entered"]
[connection signal="body_exited" from="Detection_Area_2" to="." method="_on_detection_area_2_body_exited"]
[connection signal="body_entered" from="Attack_Area" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="Attack_Area" to="." method="_on_attack_area_body_exited"]
[connection signal="body_entered" from="Detect_Enviroment" to="." method="_on_detect_enviroment_body_entered"]
[connection signal="body_exited" from="Detect_Enviroment" to="." method="_on_detect_enviroment_body_exited"]
[connection signal="body_entered" from="Detect_Enviroment2" to="." method="_on_detect_enviroment_2_body_entered"]
[connection signal="body_exited" from="Detect_Enviroment2" to="." method="_on_detect_enviroment_2_body_exited"]
